2008-10-14  Nick Garnett  <nickg@ecoscentric.com>

	* tests/timers.c: Add ifdefs to avoid compiling tests when not all
	packages or components are present.

2008-10-10  Nick Garnett  <nickg@ecoscentric.com>

	* cdl/hal_cortexm_stm32.cdl: Only build tests if the kernel is present.

	* include/var_io.h (CYGHWR_HAL_STM32_GPIO_CFG): Add PULLUP bit to mask.

	* tests/timers.c (timers_test): Terminate with PASS_FINISH rather
	than just FINISH.

2008-10-08  Nick Garnett  <nickg@ecoscentric.com>

	* include/var_intr.h (CYGNUM_HAL_ISR_MAX, CYGNUM_HAL_VSR_MAX): Fix
	definition of these values.

	* tests/timers.c: Fix to run for maximum duration of 2 minutes.

2008-10-06  Nick Garnett  <nickg@ecoscentric.com>

	* cdl/hal_cortexm_stm32.cdl:
	* include/variant.inc:
	* include/var_arch.h:
	* include/var_intr.h:
	* include/var_io.h:
	* include/hal_cache.h:
	* include/hal_diag.h:
	* include/plf_stub.h:
	* src/hal_diag.c:
	* src/stm32_misc.c:
	New package -- ST STM32 variant HAL.	
	
//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 2008 eCosCentric Limited
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//